Fixed customers alignment

--- a/src/components/AddCustomerForm/index.css
+++ b/src/components/AddCustomerForm/index.css
@@ -3,8 +3,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    padding: 20px;
+    padding: 0 20px;
     box-sizing:  border-box;
     background-color: #ffffff;
     border: 1px solid #E8ECF2;
@@ -20,20 +19,20 @@
 }
 
 .add-customer-title{
-    font-size: 30px;
+    font-size: 20px;
     color: #000000;
     font-weight: 2000;
     font-family: 'Poppins', sans-serif;
 }
 
 .add-customer-label{
-    font-size: 24px;
+    font-size: 16px;
     color: #000000;
     font-weight: 700;
 }
 
 .add-customer-input{
-    font-size: 16px;
+    font-size: 12px;
     color: #000000;
     font-weight: 400;
     border-radius: 5px;
@@ -46,7 +45,7 @@
 }
 
 .add-customer-textarea{
-    font-size: 16px;
+    font-size: 12px;
     color: #000000;
     font-weight: 400;
     border-radius: 5px;
@@ -63,7 +62,7 @@
     height: 50px;
     background-color: #108A43;
     color: #ffffff;
-    font-size: 16px;
+    font-size: 12px;
     font-weight: 700;
     border-radius: 5px;
     border: none;
